--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,12 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - quiz",
+            "request": "launch",
+            "mainClass": "quiz"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - objects",
             "request": "launch",
             "mainClass": "objects"
